Fix styling rules and vertically align source to top

--- a/assets/1-style.css
+++ b/assets/1-style.css
@@ -25,4 +25,5 @@
 
 .sidebar-link, .sidebar-link:hover, .sidebar-link:active, .sidebar-link.active {
     color: black;
+    padding-left: 0;
 }
